Started on front end template

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" th:href="@{/app.css}" />
 
-    <title>giflib | Home</title>
+    <title>My Recipes | Home</title>
 </head>
 <body>
     <div class="navbar-fixed">
         <nav>
             <div class="container">
-                <a th:href="@{/}" class="brand-logo">gif<span>.</span>lib</a>
+                <a th:href="@{/}" class="brand-logo">My Recipes</a>
                 <a href="#" data-activates="mobile-nav" class="button-collapse right"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
                     <li class="active"><a th:href="@{/}">Explore</a></li>
@@ -47,19 +47,19 @@
         <div class="row">
             <div class="col s12 l4">
                 <a>
-                    <img th:src="@{/gifs/compiler-bot.gif}" />
+                    <img th:src="@{/images/nachos.jpg}" />
                     <a href="#" class="mark favorite"></a>
                 </a>
             </div>
             <div class="col s12 l4">
                 <a>
-                    <img th:src="@{/gifs/compiler-bot.gif}" />
+                    <img th:src="@{/images/nachos.jpg}" />
                     <a href="#" class="mark favorite"></a>
                 </a>
             </div>
             <div class="col s12 l4">
                 <a>
-                    <img th:src="@{/gifs/compiler-bot.gif}" />
+                    <img th:src="@{/images/nachos.jpg}" />
                     <a href="#" class="mark favorite"></a>
                 </a>
             </div>
