--- a/src/main/resources/templates/recipe-details.html
+++ b/src/main/resources/templates/recipe-details.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" th:href="@{/app.css}" />
 
-    <title th:text="'giflib | ' + ${gif.name}">giflib</title>
+    <title th:text="'Recipe | ' + ${recipe.name}">Recipe Details</title>
 </head>
 <body>
     <div class="navbar-fixed">
         <nav>
             <div class="container">
-                <a th:href="@{/}" class="brand-logo">gif<span>.</span>lib</a>
+                <a th:href="@{/}" class="brand-logo">My Recipes</a>
                 <a href="#" data-activates="mobile-nav" class="button-collapse right"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
                     <li class="active"><a th:href="@{/}">Explore</a></li>
@@ -36,17 +36,17 @@
             <div class="col s12">
                 <form action="#" method="get">
                     <div class="input-field">
-                        <input name="q" type="search" placeholder="Search all gifs..." required="required" autocomplete="off"/>
+                        <input name="q" type="search" placeholder="Search all recipes..." required="required" autocomplete="off"/>
                         <i class="material-icons">search</i>
                     </div>
                 </form>
             </div>
         </div>
     </div>
-    <div class="gif-detail container">
+    <div class="recipe-detail container">
         <div class="frame row">
             <div class="col s12">
-                <img th:src="@{/gifs/compiler-bot.gif}" alt="gif" />
+                <img th:src="@{'/images/' + ${recipe.name} + '.jpg'}" alt="nachos" />
                 <a href="#" class="mark favorite"></a>
             </div>
         </div>
@@ -57,8 +57,8 @@
                         <img class="circle" src="http://api.adorable.io/avatars/205/avatar" alt="avatar" />
                     </div>
                     <div class="col s9">
-                        <h4>Craig Dennis</h4>
-                        <p>Uploaded on Oct 30 2015</p>
+                        <h4>Mike Sheehy</h4>
+                        <p>Uploaded on March 15 2021</p>
                     </div>
                 </div>
             </div>
