Update home images

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -36,7 +36,7 @@
             <div class="col s12">
                 <form action="#" method="get">
                     <div class="input-field">
-                        <input name="q" type="search" placeholder="Search all gifs..." required="required" autocomplete="off"/>
+                        <input name="q" type="search" placeholder="Search all recipes" required="required" autocomplete="off"/>
                         <i class="material-icons">search</i>
                     </div>
                 </form>
@@ -53,13 +53,13 @@
             </div>
             <div class="col s12 l4">
                 <a>
-                    <img th:src="@{/images/nachos.jpg}" />
+                    <img th:src="@{/images/cubano.jpg}" />
                     <a href="#" class="mark favorite"></a>
                 </a>
             </div>
             <div class="col s12 l4">
                 <a>
-                    <img th:src="@{/images/nachos.jpg}" />
+                    <img th:src="@{/images/chicken-parm.jpg}" />
                     <a href="#" class="mark favorite"></a>
                 </a>
             </div>
