update home images

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -59,7 +59,7 @@
             </div>
             <div class="col s12 l4">
                 <a>
-                    <img th:src="@{/images/chicken-parm.jpg}" />
+                    <img th:src="@{/images/guacamole.jpg}" />
                     <a href="#" class="mark favorite"></a>
                 </a>
             </div>
