--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -45,22 +45,10 @@
     </div>
     <div class="gifs container">
         <div class="row">
-            <div class="col s12 l4">
-                <a>
-                    <img th:src="@{/images/nachos.jpg}" />
-                    <a href="#" class="mark favorite"></a>
-                </a>
-            </div>
-            <div class="col s12 l4">
-                <a>
-                    <img th:src="@{/images/cubano.jpg}" />
-                    <a href="#" class="mark favorite"></a>
-                </a>
-            </div>
-            <div class="col s12 l4">
-                <a>
-                    <img th:src="@{/images/guacamole.jpg}" />
-                    <a href="#" class="mark favorite"></a>
+            <div th:each="recipe : ${recipes}" class="col s12 l4">
+                <a th:href="@{'/recipe/' + ${recipe.name}}">
+                    <img th:src="@{'/images/' + ${recipe.name} + '.jpg'}" />
+                    <a href="#" th:class="(${recipe.favorite} ? 'un' : '') + 'mark favorite'"></a>
                 </a>
             </div>
         </div>
