--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -43,7 +43,7 @@
             </div>
         </div>
     </div>
-    <div class="gifs container">
+    <div class="recipes container">
         <div class="row">
             <div th:each="recipe : ${recipes}" class="col s12 l4">
                 <a th:href="@{'/recipe/' + ${recipe.name}}">
