--- a/src/main/resources/templates/recipe-details.html
+++ b/src/main/resources/templates/recipe-details.html
@@ -57,8 +57,13 @@
                         <img class="circle" src="http://api.adorable.io/avatars/205/avatar" alt="avatar" />
                     </div>
                     <div class="col s9">
+                        <h2 th:text="${#strings.capitalize(recipe.name)}">Recipe</h2>
                         <h4 th:text="${recipe.username}">Mike Sheehy</h4>
                         <p th:text="'Uploaded on ' + ${recipe.dateUploaded}">Uploaded on March 15 2021</p>
+                        <h4>Ingredients</h4>
+                        <p>Ingredients will go here in an unordered list</p>
+                        <h4>Directions</h4>
+                        <p>I need to put an ordered list here</p>
                     </div>
                 </div>
             </div>
