--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" th:href="@{/app.css}" />
 
-    <title>giflib | Categories</title>
+    <title>My Recipes | Categories</title>
 </head>
 <body>
 <div class="navbar-fixed">
     <nav>
         <div class="container">
-            <a th:href="@{/}" class="brand-logo">gif<span>.</span>lib</a>
+            <a th:href="@{/}" class="brand-logo">My Recipes</a>
             <a href="#" data-activates="mobile-nav" class="button-collapse right"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
                 <li><a th:href="@{/}">Explore</a></li>
@@ -45,25 +45,11 @@
 </div>
 <div class="categories container">
     <div class="row">
-        <!--
-            Repeat the div element for each object in the 'categories'
-            collection of the model map. Each object in the loop
-            should be named 'category'
-        -->
-        <div class="col s12 l4">
+        <div th:each="category : ${categories}" class="col s12 l4">
             <div class="card">
                 <div class="card-content">
                     <div class="card-title">
-                        <!--
-                            Set the href attribute of the a tag to be the URI to
-                            a specific category according to the category's id.
-                            For example, /category/1 or /category/2
-
-                            Then, set the text between the a tags to be the category name,
-                            coming from the 'name' field of the 'category' object
-                            in the model map
-                        -->
-                        <a>Category Name</a>
+                        <a th:href = "@{'/category/' + ${category.id}}" th:text="${category.name}">Category Name</a>
                     </div>
                 </div>
             </div>
