--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" th:href="@{/app.css}" />
 
-    <title th:text="'giflib | ' + ${category.name}">giflib | Category</title>
+    <title th:text="'My Recipes | ' + ${category.name}">My Recipes | Category</title>
 </head>
 <body>
 <div class="navbar-fixed">
     <nav>
         <div class="container">
-            <a th:href="@{/}" class="brand-logo">gif<span>.</span>lib</a>
+            <a th:href="@{/}" class="brand-logo">My Recipes</a>
             <a href="#" data-activates="mobile-nav" class="button-collapse right"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
                 <li><a th:href="@{/}">Explore</a></li>
@@ -43,39 +43,13 @@
         </div>
     </div>
 </div>
-<div class="gifs container">
-    <!--
-        In the div element, replace the 'category name' text
-        with the value of the 'name' field of the 'category'
-        object from the model map
-    -->
-    <div class="chip">category name</div>
+<div class="recipes container">
+    <div class="chip" th:text="${category.name}">category name</div>
     <div class="row">
-        <!--
-            Repeat the div element for each object in the 'gifs'
-            collection of the model map. Each object in the loop
-            should be named 'gif'
-        -->
-        <div class="col s12 l4">
-            <!--
-                    In the a tag, make the href attribute point to
-                    the GIF detail page using the 'name' field of
-                    the 'gif' object from the loop above
-             -->
-            <a>
-                <!--
-                    In the img tag, make the src attribute point
-                    to the static GIF image, according to the 'name'
-                    field of the 'gif' object from the loop above
-                -->
-                <img src="http://placehold.it/200x200" />
-                <!--
-                    In the a tag, make the class attribute have the value
-                    of 'mark favorite' or 'unmark favorite' according to
-                    the 'favorite' field of the 'gif' object from the
-                    loop above
-                -->
-                <a href="#" class="mark favorite"></a>
+        <div th:each="recipe : ${recipes}" class="col s12 l4">
+            <a th:href = "@{'/recipe/' + ${recipe.name}}">
+                <img th:src="@{'/images/' + ${recipe.name} + '.jpg'}" />
+                <a href="#" th:class="(${recipe.favorite} ? 'un' : '') + 'mark favorite'"></a>
             </a>
         </div>
     </div>
